# llms-gen

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: monitor-test-site-pages.yml
fixtures/monitor-test-site/: README.md  about.html  blog.html  changelog.html  docs.html  index.html  pricing.html  robots.txt  sitemap.xml
src/llms_gen/: __init__.py  config.py  db_session.py  main.py
src/llms_gen/api/: deps.py  security.py
src/llms_gen/api/routes/: __init__.py  jobs.py  monitored.py
src/llms_gen/crawler/: __init__.py  discover.py  fetch.py  normalize.py  parse.py  rank.py  robots.py  sitemap.py
src/llms_gen/generator/: __init__.py  build_llms_txt.py  validate.py
src/llms_gen/models/: __init__.py  db.py  domain.py
src/llms_gen/services/: job_runner.py  monitor_scheduler.py  pipeline.py  webhook_notify.py
src/llms_gen/templates/: index.html
tests/: conftest.py  test_api_auth.py  test_generator.py  test_normalize.py  test_rank.py
